--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,13 @@ fastapi==0.104.0
 greenlet==3.0.1
 h11==0.14.0
 idna==3.4
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
 psycopg2==2.9.9
 pydantic==2.4.2
 pydantic_core==2.10.1
+pytest==7.4.3
 python-dateutil==2.8.2
 six==1.16.0
 sniffio==1.3.0
